@@ -1,3 +1,7 @@
+2003-04-11 kevin Vigor <kevin@vigor.nu>
+
+	* ds390/gen.c ds390/peeph.def: fix bug 706781
+
 2003-04-11  Borut Razem <borut.razem@siol.net>
 
 	* support/Util/dbuf.c, support/Util/dbuf.h: update to version 1.1.1 - re-added C++ stuff to make it still more portable
